deployment/k8s-hazelcast.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: hazelcast
  labels:
    app: hazelcast
spec:
  replicas: 3
  serviceName: hazelcast-headless
  selector:
    matchLabels:
      app: hazelcast
  template:
    metadata:
      labels:
        app: hazelcast
        role: hazelcast
    spec:
      containers:
        - name: hazelcast-openshift
          image: hazelcast/hazelcast:3.12
          ports:
            - name: hazelcast
              containerPort: 5701
          livenessProbe:
            httpGet:
              path: /hazelcast/health/node-state
              port: 5701
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /hazelcast/health/node-state
              port: 5701
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 1
          volumeMounts:
            - name: hazelcast-storage
              mountPath: /data/hazelcast
      volumes:
        - name: hazelcast-storage
          configMap:
            name: hazelcast-configuration
---
apiVersion: v1
kind: Service
metadata:
  name: hazelcast-service
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: hazelcast
  ports:
    - protocol: TCP
      port: 5701
