deployment/k8s-hazzelcuster.yaml
apiVersion: v1
kind: Service
metadata:
  name: hazelcast-server-0
spec:
  type: LoadBalancer
  selector:
    statefulset.kubernetes.io/pod-name: hazzelcuster-server-0
  ports:
    - protocol: TCP
      port: 5701
      targetPort: 5701
      nodePort: 30010
---
apiVersion: v1
kind: Service
metadata:
  name: hazzelcuster-headless
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: hazzelcuster-server
  ports:
    - protocol: TCP
      port: 5701
      targetPort: 5701
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: hazzelcuster-server
spec:
  replicas: 2
  serviceName: hazzelcuster-headless
  selector:
    matchLabels:
      app: hazzelcuster-server
  template:
    metadata:
      labels:
        app: hazzelcuster-server
    spec:
      containers:
        - env:
            - name: K8S
              value: "true"
            - name: HEADLESS_DNS
              value: "hazzelcuster-headless.default.svc.cluster.local"
            - name: MGMT_CENTER_URL
              value: "http://hazelcast-management-center:8080/hazelcast-mancenter"
          image: "maslick/hazzelcuster"
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
          name: container-hazelcast-server
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 30
