deployment/k8s-hazelcast-mc-ingress-nginx.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hazelcast-ingress
  labels:
    app: hazelcast
  annotations:
    kubernetes.io/tls-acme: “true”
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/app-root: "/hazelcast-mancenter"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  rules:
    - host: hazelcast.maslick.ru
      http:
        paths:
          - path: /
            backend:
              serviceName: mc-service
              servicePort: 8080
  tls:
    - secretName: tls-prod-cert
      hosts:
        - 'hazelcast.maslick.ru'
